--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Te Tai Hou Teams – 2025</title>
 
 <style>
-/* --- General page setup --- */
 body {
   font-family: "Segoe UI", Roboto, sans-serif;
   background-color: #f9fafb;
@@ -16,15 +15,11 @@ body {
   display: flex;
   justify-content: center;
 }
-
-/* --- Page wrapper centered --- */
 #page-wrapper {
   width: 100%;
   max-width: 75%;
   min-width: 320px;
 }
-
-/* --- Header --- */
 header {
   display: flex;
   align-items: center;
@@ -41,8 +36,6 @@ header h1 {
   margin: 0;
   color: #1a365d;
 }
-
-/* --- Controls --- */
 .controls {
   display: flex;
   justify-content: center;
@@ -72,8 +65,6 @@ header h1 {
 .controls button:hover {
   background-color: #1e4e8c;
 }
-
-/* --- Group containers --- */
 section {
   margin-bottom: 1rem;
   border-radius: 0.75rem;
@@ -100,8 +91,6 @@ section {
 .group-content.hidden {
   display: none;
 }
-
-/* --- Table --- */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -124,11 +113,6 @@ tbody td {
 tbody tr:hover {
   background: #f9fafb;
 }
-th::after {
-  content: '';
-}
-
-/* === COLUMN WRAPPING RULES === */
 td:not(:last-child),
 th:not(:last-child) {
   white-space: nowrap;
@@ -139,27 +123,10 @@ td:last-child,
 th:last-child {
   white-space: normal;
 }
-
-/* --- Specific column widths --- */
 td:nth-child(2),
 th:nth-child(2) {
-  width: 30%; /* Email column wider */
+  width: 30%;
 }
-
-/* --- Minimum width for compact columns --- */
-th:nth-child(5),
-td:nth-child(5), /* Paid */
-th:nth-child(6),
-td:nth-child(6), /* Cleared */
-th:nth-child(7),
-td:nth-child(7)  /* GD Regist. */
-{
-  width: 60px;
-  min-width: 60px;
-  text-align: center;
-}
-
-/* --- Responsive --- */
 @media (max-width: 768px) {
   #page-wrapper {
     max-width: 100%;
@@ -191,233 +158,171 @@ td:nth-child(7)  /* GD Regist. */
 
 <body>
 <div id="page-wrapper">
-<header style="text-align: center; margin-bottom: 24px;">
-  <a href="https://www.poriruaheatbasketball.org" target="_blank">
-    <img src="images/logo.png" alt="Porirua Heat Logo" style="height: 60px; border-radius: 50%; margin-bottom: 12px;">
-  </a>
-  <h1 style="font-size: 1.8em; margin: 0; color: #1a365d;">TE TAI HOU TEAMS – 2025 TERM 4</h1>
-</header>
+  <header>
+    <a href="https://www.poriruaheatbasketball.org" target="_blank">
+      <img src="images/logo.png" alt="Porirua Heat Logo">
+    </a>
+    <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
+  </header>
 
-<div class="controls">
-  <input id="search" type="text" placeholder="Search...">
-  <select id="selectionFilter"><option value="">All Teams</option></select>
-  <select id="clearedFilter"><option value="">All Cleared</option></select>
-  <select id="gdRegFilter"><option value="">All GD Regist.</option></select>
-  <button id="export">Export CSV</button>
-  <button id="toggleGroups">Collapse All</button>
-</div>
+  <div class="controls">
+    <input id="search" type="text" placeholder="Search...">
+    <select id="selectionFilter">
+      <option value="">All Teams</option>
+    </select>
+    <select id="clearedFilter">
+      <option value="">All Cleared</option>
+      <option value="Cleared">Cleared</option>
+      <option value="Not Cleared">Not Cleared</option>
+      <option value="(Blank)">(Blank)</option>
+    </select>
+    <select id="gdFilter">
+      <option value="">All GD Regist.</option>
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
+      <option value="(Blank)">(Blank)</option>
+    </select>
+    <button id="export">Export CSV</button>
+    <button id="toggleGroups">Collapse All</button>
+  </div>
 
-<div style="margin-top: 6px;">
-  <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
-    Confirmed Club Registrations
-  </a>
-</div>
+  <div style="margin-top: 6px;">
+    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
+      Confirmed Club Registrations
+    </a>
+  </div>
 
-<div id="table-container"></div>
+  <div id="table-container"></div>
 </div>
 
 <script>
-const search = document.getElementById('search');
-const selectionFilter = document.getElementById('selectionFilter');
-const clearedFilter = document.getElementById('clearedFilter');
-const gdRegFilter = document.getElementById('gdRegFilter');
-const container = document.getElementById('table-container');
-const exportBtn = document.getElementById('export');
-const toggleGroupsBtn = document.getElementById('toggleGroups');
-
-let headers = [];
-let allRows = [];
-let indicativeIndex = -1;
-let clearedIndex = -1;
-let gdRegIndex = -1;
-
-const groupOrder = [
-  "10U Dev","10U Elite","12U Dev","12U Elite",
-  "14U Black","14U Orange","14U Blaze","14U Flames",
-  "16U Dev","16U Elite","20U","Mens","Womens"
+const data = [
+  { fullName: "John Doe", email: "john@example.com", contact: "021111111", selection: "U15 Boys", paid: "Yes", cleared: "Cleared", gdRegist: "" },
+  { fullName: "Jane Smith", email: "jane@example.com", contact: "022222222", selection: "U15 Boys", paid: "No", cleared: "", gdRegist: "Yes" },
+  { fullName: "Alice Brown", email: "alice@example.com", contact: "023333333", selection: "U17 Girls", paid: "Yes", cleared: "Not Cleared", gdRegist: "No" },
+  { fullName: "Ben White", email: "ben@example.com", contact: "024444444", selection: "U17 Girls", paid: "No", cleared: "", gdRegist: "" }
 ];
 
-// --- Load CSV ---
-fetch('teams.csv')
-  .then(res => res.text())
-  .then(text => {
-    const lines = text.trim().split('\n').map(l => l.split(','));
-    headers = lines[0].map(h => h.trim());
-    indicativeIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
-    clearedIndex = headers.findIndex(h => h.toLowerCase() === 'cleared');
-    gdRegIndex = headers.findIndex(h => h.toLowerCase() === 'gd regist.');
+const tableContainer = document.getElementById("table-container");
+const searchInput = document.getElementById("search");
+const selectionFilter = document.getElementById("selectionFilter");
+const clearedFilter = document.getElementById("clearedFilter");
+const gdFilter = document.getElementById("gdFilter");
+const toggleGroupsBtn = document.getElementById("toggleGroups");
 
-    allRows = lines.slice(1).map(r => r.map(c => c.trim()))
-      .filter(r => r[indicativeIndex] && r[indicativeIndex] !== '');
+let groupsCollapsed = false;
 
-    populateDropdowns();
-    renderGroups(allRows);
+function renderTable() {
+  const searchValue = searchInput.value.toLowerCase();
+  const selectionValue = selectionFilter.value;
+  const clearedValue = clearedFilter.value;
+  const gdValue = gdFilter.value;
+
+  const filtered = data.filter(d => {
+    const matchSearch =
+      d.fullName.toLowerCase().includes(searchValue) ||
+      d.email.toLowerCase().includes(searchValue) ||
+      d.contact.toLowerCase().includes(searchValue);
+
+    const matchSelection = selectionValue === "" || d.selection === selectionValue;
+
+    const matchCleared =
+      clearedValue === "" ||
+      (clearedValue === "(Blank)" && (!d.cleared || d.cleared.trim() === "")) ||
+      d.cleared === clearedValue;
+
+    const matchGD =
+      gdValue === "" ||
+      (gdValue === "(Blank)" && (!d.gdRegist || d.gdRegist.trim() === "")) ||
+      d.gdRegist === gdValue;
+
+    return matchSearch && matchSelection && matchCleared && matchGD;
   });
 
-// --- Populate dropdowns ---
-function populateDropdowns() {
-  const teamValues = [...new Set(allRows.map(r => r[indicativeIndex]))];
-  const clearedValues = [...new Set(allRows.map(r => r[clearedIndex] || '(Blank)'))];
-  const gdRegValues = [...new Set(allRows.map(r => r[gdRegIndex] || '(Blank)'))];
+  const grouped = {};
+  filtered.forEach(d => {
+    if (!grouped[d.selection]) grouped[d.selection] = [];
+    grouped[d.selection].push(d);
+  });
 
-  const orderedTeams = groupOrder.concat(teamValues.filter(v => !groupOrder.includes(v)));
-  orderedTeams.forEach(v => {
-    const opt = document.createElement('option');
-    opt.value = v;
-    opt.textContent = v;
+  let html = "";
+  Object.keys(grouped).forEach(group => {
+    html += `<section>
+      <div class="group-header">${group} <span>${grouped[group].length}</span></div>
+      <div class="group-content ${groupsCollapsed ? 'hidden' : ''}">
+        <table>
+          <thead><tr>
+            <th>Full Name</th>
+            <th>Email</th>
+            <th>Contact Number</th>
+            <th>Indicative Selection</th>
+            <th>Paid</th>
+            <th>Cleared</th>
+            <th>GD Regist.</th>
+          </tr></thead>
+          <tbody>
+          ${grouped[group].map(d => `
+            <tr>
+              <td data-label="Full Name">${d.fullName}</td>
+              <td data-label="Email">${d.email}</td>
+              <td data-label="Contact Number">${d.contact}</td>
+              <td data-label="Indicative Selection">${d.selection}</td>
+              <td data-label="Paid">${d.paid}</td>
+              <td data-label="Cleared">${d.cleared || ""}</td>
+              <td data-label="GD Regist.">${d.gdRegist || ""}</td>
+            </tr>`).join("")}
+          </tbody>
+        </table>
+      </div>
+    </section>`;
+  });
+
+  tableContainer.innerHTML = html;
+
+  document.querySelectorAll(".group-header").forEach(header => {
+    header.addEventListener("click", () => {
+      const content = header.nextElementSibling;
+      content.classList.toggle("hidden");
+    });
+  });
+}
+
+function populateFilters() {
+  const selections = [...new Set(data.map(d => d.selection))].sort();
+  selections.forEach(sel => {
+    const opt = document.createElement("option");
+    opt.value = sel;
+    opt.textContent = sel;
     selectionFilter.appendChild(opt);
   });
-
-  clearedValues.forEach(v => {
-    const opt = document.createElement('option');
-    opt.value = v === '(Blank)' ? '' : v;
-    opt.textContent = v;
-    clearedFilter.appendChild(opt);
-  });
-
-  gdRegValues.forEach(v => {
-    const opt = document.createElement('option');
-    opt.value = v === '(Blank)' ? '' : v;
-    opt.textContent = v;
-    gdRegFilter.appendChild(opt);
-  });
 }
 
-// --- Render groups ---
-function renderGroups(rows) {
-  container.innerHTML = '';
+searchInput.addEventListener("input", renderTable);
+selectionFilter.addEventListener("change", renderTable);
+clearedFilter.addEventListener("change", renderTable);
+gdFilter.addEventListener("change", renderTable);
+toggleGroupsBtn.addEventListener("click", () => {
+  groupsCollapsed = !groupsCollapsed;
+  renderTable();
+});
 
-  const groups = rows.reduce((acc, row) => {
-    const key = row[indicativeIndex];
-    if (!acc[key]) acc[key] = [];
-    acc[key].push(row);
-    return acc;
-  }, {});
-
-  const filterVal = selectionFilter.value;
-  const allGroupKeys = Object.keys(groups);
-  const visibleKeys = filterVal
-    ? [filterVal]
-    : [...groupOrder.filter(g => allGroupKeys.includes(g)), ...allGroupKeys.filter(k => !groupOrder.includes(k))];
-
-  visibleKeys.forEach(groupName => {
-    const groupRows = groups[groupName];
-    if (!groupRows?.length) return;
-
-    const section = document.createElement('section');
-    const header = document.createElement('div');
-    header.className = 'group-header';
-    header.innerHTML = `<span>${groupName}</span><span>(${groupRows.length}) ▼</span>`;
-    section.appendChild(header);
-
-    const wrapper = document.createElement('div');
-    wrapper.className = 'group-content';
-
-    const table = document.createElement('table');
-    const thead = document.createElement('thead');
-    const headerRow = document.createElement('tr');
-
-    headers.forEach((h, i) => {
-      if (i === indicativeIndex) return;
-      const th = document.createElement('th');
-      th.textContent = h;
-      headerRow.appendChild(th);
-    });
-    thead.appendChild(headerRow);
-    table.appendChild(thead);
-
-    const tbody = document.createElement('tbody');
-    groupRows.forEach(r => {
-      const tr = document.createElement('tr');
-      r.forEach((c, i) => {
-        if (i === indicativeIndex) return;
-        const td = document.createElement('td');
-        td.textContent = c;
-        td.setAttribute('data-label', headers[i]);
-        tr.appendChild(td);
-      });
-      tbody.appendChild(tr);
-    });
-
-    table.appendChild(tbody);
-    wrapper.appendChild(table);
-    section.appendChild(wrapper);
-    container.appendChild(section);
-
-    // Toggle individual group
-    header.addEventListener('click', () => {
-      wrapper.classList.toggle('hidden');
-      const arrow = header.querySelector('span:last-child');
-      arrow.textContent = wrapper.classList.contains('hidden')
-        ? `(${groupRows.length}) ▲`
-        : `(${groupRows.length}) ▼`;
-    });
+document.getElementById("export").addEventListener("click", () => {
+  const rows = [["Full Name","Email","Contact","Indicative Selection","Paid","Cleared","GD Regist."]];
+  const currentRows = tableContainer.querySelectorAll("tbody tr");
+  currentRows.forEach(tr => {
+    const cells = Array.from(tr.children).map(td => td.innerText);
+    rows.push(cells);
   });
-}
-
-// --- Search & Filter ---
-function applyFilters() {
-  const q = search.value.toLowerCase();
-  const sel = selectionFilter.value;
-  const cleared = clearedFilter.value;
-  const gdReg = gdRegFilter.value;
-
-  const filtered = allRows.filter(r => {
-    const matchesSearch = r.some(c => c.toLowerCase().includes(q));
-    const matchesSel = !sel || r[indicativeIndex] === sel;
-    const matchesCleared = cleared === '' ? true : (r[clearedIndex] || '') === cleared;
-    const matchesGD = gdReg === '' ? true : (r[gdRegIndex] || '') === gdReg;
-    return matchesSearch && matchesSel && matchesCleared && matchesGD;
-  });
-
-  renderGroups(filtered);
-}
-
-search.addEventListener('input', applyFilters);
-selectionFilter.addEventListener('change', applyFilters);
-clearedFilter.addEventListener('change', applyFilters);
-gdRegFilter.addEventListener('change', applyFilters);
-
-// --- Export visible ---
-exportBtn.addEventListener('click', () => {
-  const rows = [];
-  const visibleHeaders = headers.filter((_, i) => i !== indicativeIndex);
-  rows.push(visibleHeaders.join(','));
-  container.querySelectorAll('section').forEach(section => {
-    const wrapper = section.querySelector('.group-content');
-    if (wrapper.classList.contains('hidden')) return;
-    wrapper.querySelectorAll('tbody tr').forEach(tr => {
-      const cells = Array.from(tr.children).map(td => td.textContent);
-      rows.push(cells.join(','));
-    });
-  });
-  const blob = new Blob([rows.join('\n')], { type: 'text/csv;charset=utf-8;' });
-  const link = document.createElement('a');
+  const csv = rows.map(r => r.map(x => `"${x}"`).join(",")).join("\n");
+  const blob = new Blob([csv], {type: "text/csv"});
+  const link = document.createElement("a");
   link.href = URL.createObjectURL(blob);
-  link.download = 'filtered_data.csv';
+  link.download = "TeTaiHouTeams2025.csv";
   link.click();
 });
 
-// --- Expand / Collapse All ---
-toggleGroupsBtn.addEventListener('click', () => {
-  const allGroups = container.querySelectorAll('.group-content');
-  const anyOpen = Array.from(allGroups).some(g => !g.classList.contains('hidden'));
-
-  allGroups.forEach(groupContent => {
-    const section = groupContent.parentElement;
-    const header = section.querySelector('.group-header span:last-child');
-    const count = groupContent.querySelectorAll('tbody tr').length;
-    if (anyOpen) {
-      groupContent.classList.add('hidden');
-      header.textContent = `(${count}) ▲`;
-    } else {
-      groupContent.classList.remove('hidden');
-      header.textContent = `(${count}) ▼`;
-    }
-  });
-
-  toggleGroupsBtn.textContent = anyOpen ? 'Expand All' : 'Collapse All';
-});
+populateFilters();
+renderTable();
 </script>
 </body>
 </html>
