--- a/index.html
+++ b/index.html
@@ -161,22 +161,47 @@ td:nth-last-child(1)  /* GD Regist. */
   #page-wrapper {
     max-width: 100%;
   }
+
   table, thead, tbody, th, td, tr {
     display: block;
   }
+
   thead {
     display: none;
   }
+
   tr {
     margin-bottom: 12px;
     border-bottom: 1px solid #ddd;
   }
+
   td {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     padding: 8px;
     white-space: normal;
+    word-break: break-word;
+    overflow-wrap: anywhere;
   }
+
+  /* ✅ Right-align for Email & Contact number fields */
+  td[data-label="Email"],
+  td[data-label="Contact number"] {
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: right;
+  }
+
+  td[data-label="Email"]::before,
+  td[data-label="Contact number"]::before {
+    align-self: flex-start;
+    font-weight: 600;
+    color: #2b6cb0;
+    margin-bottom: 2px;
+  }
+
+  /* Other labels */
   td::before {
     content: attr(data-label);
     font-weight: 600;
