--- a/index.html
+++ b/index.html
@@ -124,9 +124,6 @@ tbody td {
 tbody tr:hover {
   background: #f9fafb;
 }
-th::after {
-  content: '';
-}
 
 /* === COLUMN WRAPPING RULES === */
 td:not(:nth-last-child(-n+3)),
@@ -176,36 +173,27 @@ td:nth-last-child(1)  /* GD Regist. */
   }
 
   td {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    display: block;
     padding: 8px;
     white-space: normal;
     word-break: break-word;
     overflow-wrap: anywhere;
   }
 
-  /* ✅ Right-align for Email & Contact number fields */
-  td[data-label="Email"],
-  td[data-label="Contact number"] {
-    flex-direction: column;
-    align-items: flex-end;
-    text-align: right;
-  }
-
-  td[data-label="Email"]::before,
-  td[data-label="Contact number"]::before {
-    align-self: flex-start;
-    font-weight: 600;
-    color: #2b6cb0;
-    margin-bottom: 2px;
-  }
-
-  /* Other labels */
   td::before {
     content: attr(data-label);
+    display: block;
     font-weight: 600;
     color: #2b6cb0;
+    margin-bottom: 3px;
+  }
+
+  /* ✅ Email and Contact number are full-width, not cut off */
+  td[data-label="Email"],
+  td[data-label="Contact number"] {
+    text-align: left;
+    word-break: break-all;
+    overflow-wrap: anywhere;
   }
 }
 </style>
@@ -354,7 +342,7 @@ function renderGroups(rows) {
       r.forEach((c, i) => {
         if (i === indicativeIndex) return;
         const td = document.createElement('td');
-        td.textContent = c || ''; // show empty cells
+        td.textContent = c || '';
         td.setAttribute('data-label', headers[i]);
         tr.appendChild(td);
       });
